--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
+    "@vueuse/core": "^9.3.0",
+    "axios": "^1.1.2",
     "pinia": "^2.0.21",
     "primeflex": "^3.2.1",
     "primeicons": "^5.0.0",
@@ -25,6 +29,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.1.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vue-tsc": "^0.40.7"
