--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^5.40.1",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "@vueuse/core": "^9.3.0",
@@ -27,12 +28,13 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^8.7.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
+    "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^0.40.7"
   }
 }
