--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "just-buy",
   "version": "0.0.0",
   "scripts": {
-    "build": "run-p type-check build-only",
+    "build": "run-p build-only",
     "lint": "vue-cli-service lint",
     "build-only": "vite build",
     "dev": "vite",
